[package]
name = "helium-wallet-recover"
version = "0.4.0"
edition = "2021"

[dependencies]
helium-mnemonic = { version = "0.0.1-rc.1", git = "https://github.com/helium/helium-wallet-rs", package = "helium-mnemonic" }
helium-wallet = { version = "2.1.1", git = "https://github.com/helium/helium-wallet-rs", package = "helium-wallet" }
helium-lib = { version = "0.1.1", git = "https://github.com/helium/helium-wallet-rs", package = "helium-lib" }
anyhow = "1.0.94"
fuzzt = "0.3.1"
itertools = "0.13.0"
clap = "4.5.23"
thiserror = "2.0.9"
